--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.2",
     "three": "^0.173.0",
     "web-vitals": "^1.1.2"
   },
