--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^12.4.1",
     "gsap": "^3.12.7",
+    "leaflet": "^1.9.4",
     "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.2",
