--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
